# praktikum_11_2_FH_Aachen_MyFramedRectangle

./: CMakeLists.txt  MyCanvas.cpp  MyCanvas.h  MyFramedRectangle.cpp  MyFramedRectangle.h  MyRectangle.cpp  MyRectangle.h  gip_mini_catch_heap_delete.h  gip_mini_catch_v_2_3.h  main.cpp  test_MyCanvas.cpp  test_MyFramedRectangle.cpp  test_MyRectangle.cpp  test_operator_MyRectangle.cpp
