cmake_minimum_required(VERSION 3.27)
project(praktikum_11_2_FH_Aachen_MyFramedRectangle)

set(CMAKE_CXX_STANDARD 17)

add_executable(praktikum_11_2_FH_Aachen_MyFramedRectangle main.cpp
        MyFramedRectangle.cpp
        MyFramedRectangle.cpp
        MyFramedRectangle.h
        test_operator_MyRectangle.cpp
        test_MyRectangle.cpp
        test_MyFramedRectangle.cpp
        test_MyCanvas.cpp
        MyRectangle.cpp
        MyCanvas.cpp)
